--- a/index.html
+++ b/index.html
@@ -403,9 +403,13 @@
                                     <span style="font-weight: 600; color: #444;">今日理财包参与人数 (UV)：</span>
                                     按 UID 去重。只要今日发生过买入行为即算在内 (即使随后赎回)。
                                 </li>
-                                <li>
+                                <li style="margin-bottom: 8px;">
                                     <span style="font-weight: 600; color: #444;">累计理财包参与人数 (历史流量)：</span>
                                     包含历史上买过但目前已全部赎回的用户 (不仅仅是当前持仓用户)。
+                                </li>
+                                <li>
+                                    <span style="font-weight: 600; color: #444;">实名人数 (今日/累计)：</span>
+                                    特指 <span style="font-weight: 600; color: #1a1a1a;">KYC2</span> 认证通过的用户。
                                 </li>
                             </ul>
                         </div>
@@ -453,6 +457,7 @@
                             <li>
                                 <span style="font-weight: 600; color: #444;">当前参与用户国家分布：</span>
                                 统计所有<span style="color: #1a1a1a; font-weight: 500;">当前持仓用户</span>的注册地 IP。按 UID 去重。
+                                <br><span style="font-size: 13px; color: #999;">(展示样式：南丁格尔玫瑰图)</span>
                             </li>
                         </ul>
                     </div>
