--- a/index.html
+++ b/index.html
@@ -375,6 +375,15 @@
         <div class="card" style="margin-top: 24px;">
             <div class="card-title">产品文档</div>
             <div style="font-size: 14px; color: #555; line-height: 1.6;">
+                <div
+                    style="margin-bottom: 16px; padding: 10px; background-color: #fff7e6; border: 1px solid #ffd591; border-radius: 4px; color: #d46b08;">
+                    <strong>⚠️ 全局说明：</strong> 本文档及下方图表中的所有统计数值，均仅统计<strong>普通用户</strong>，不包含<strong>内部用户</strong>。
+                </div>
+                <div
+                    style="margin-bottom: 16px; padding: 10px; background-color: #fff1f0; border: 1px solid #ffa39e; border-radius: 4px; color: #cf1322;">
+                    <strong>🛑 前置 BUG 修复：</strong> 开发此需求前，请务必先解决：<a href="http://3.12.125.59/dev/browse/BD-307/"
+                        target="_blank" style="color: #cf1322; text-decoration: underline;">BD-307</a>
+                </div>
                 <!-- 模块：数据概览 -->
                 <div style="margin-bottom: 20px;">
                     <div
